<resources>
    <string name="app_name">Regalos navideños</string>
    <string name="enter_name">Country Name</string>
    <string name="add_record">Añadir</string>
    <string name="btn_update">Actualizar</string>
    <string name="btn_delete">Borrar</string>
    <string name="empty_list_text">No records found</string>
    <string name="enter_desc">Estado</string>
    <string name="enter_title">Nombre</string>
    <string name="enter_name_present">Nombre de Regalo</string>

    <string name="btn_add_present">Añadir Regalo</string>

</resources>
