<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/navidad_verde_lista"

    android:padding="10dp" >

    <EditText
        android:id="@+id/subject_edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enter_title"
        android:textColorHint="@android:color/white"
        />

    <EditText
        android:id="@+id/description_edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/enter_desc"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:textColorHint="@android:color/white"

        >
    </EditText>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="1dp"
            android:layout_weight="1"
            android:text="@string/btn_update"

            android:background="@drawable/fondo_btn_rojo" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="1dp"
            android:layout_weight="1"
            android:text="@string/btn_delete"
            android:background="@drawable/fondo_btn_rojo" />
    </LinearLayout>
    <ListView
        android:id="@+id/list_view_present"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:dividerHeight="1dp"
        android:padding="10dp" >
    </ListView>

    <Button
        android:id="@+id/add_regalo_btn_Modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_present"
        android:textColor="@android:color/white"

        android:background="@drawable/fondo_btn_rojo" />


</LinearLayout>